--- a/recipes/caprese-stuffed-avocado/index.html
+++ b/recipes/caprese-stuffed-avocado/index.html
@@ -5,72 +5,88 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="../../favicon.ico" type="image/x-icon">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500&display=swap"
+    rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="../../style/main.css">
   <title>Caprese Stuffed Avocado | Odin Recipes</title>
 </head>
 
 <body>
-    <header>
+  <header>
+    <div class="container">
       <a href="../../">
         <img src="../../assets/images/chef-odin-180w.png" alt="odin logo" height="79">
       </a>
-    </header>
-    <p><a href="../../">Home</a> / Caprese Stuffed Avocado</p>
-    <div class="container">
+    </div>
+  </header>
+
+  <p><a href="../../">Home</a> / Caprese Stuffed Avocado</p>
+
+  <div class="container">
+    <h1>Caprese Stuffed Avocado</h1>
     <img srcset="../../assets/images/r-avocado-360w.webp 360w,
             ../../assets/images/r-avocado-750w.webp 750w" sizes="(max-width: 780px) 360px, 750px"
       src="../../assets/images/r-avocado-750w.webp" alt="Caprese Stuffed Avocado" height="500px" class="img-hero">
-    <h1>Caprese Stuffed Avocado</h1>
-    <h2>Description</h2>
+    <div class="section-1">
+      <h2 class="description">Description</h2>
 
-    <p>This Caprese stuffed avocado salad is made up of avocado halves, filled with a simple Caprese salad using cherry
-      tomatoes, mozzarella pearls, and basil, and drizzled with balsamic vinegar.</p>
-
-    <h2>Ingredients</h2>
-    <ul>
-      <li>1 avocado - peeled, pitted, and cut in half</li>
-      <li>1/4 cup fresh mozzarella pearls</li>
-      <li>1/4 cup cherry tomatoes, halved</li>
-      <li>6 fresh basil leaves, thinly sliced</li>
-      <li>1 tablespoon balsamic vinegar</li>
-      <li>salt and pepper to taste</li>
-    </ul>
-
-    <h2>Steps</h2>
-    <ol>
-      <li>Arrange avocado halves onto a plate.</li>
-      <li>Toss together mozzarella pearls, cherry tomatoes, and basil in a small bowl. Spoon the Caprese filling into
-        each
-        avocado half and drizzle with balsamic vinegar. Season with salt and pepper. Serve immediately.</li>
-    </ol>
+      <p>This Caprese stuffed avocado salad is made up of avocado halves, filled with a simple Caprese salad using
+        cherry
+        tomatoes, mozzarella pearls, and basil, and drizzled with balsamic vinegar.</p>
+    </div>
+    <div class="section-2">
+      <h2>Ingredients</h2>
+      <ul>
+        <li>1 avocado - peeled, pitted, and cut in half</li>
+        <li>1/4 cup fresh mozzarella pearls</li>
+        <li>1/4 cup cherry tomatoes, halved</li>
+        <li>6 fresh basil leaves, thinly sliced</li>
+        <li>1 tablespoon balsamic vinegar</li>
+        <li>salt and pepper to taste</li>
+      </ul>
+    </div>
+    <div class="section-3">
+      <h2>Steps</h2>
+      <ol>
+        <li>Arrange avocado halves onto a plate.</li>
+        <li>Toss together mozzarella pearls, cherry tomatoes, and basil in a small bowl. Spoon the Caprese filling into
+          each
+          avocado half and drizzle with balsamic vinegar. Season with salt and pepper. Serve immediately.</li>
+      </ol>
+    </div>
   </div>
 
   <footer>
-    <div class="footer-about">
+    <div class="container">
+      <div class="footer-about">
 
-      <p><cite>
-          Recipes Website
-        </cite> made it by MH'D </p>
+        <p><cite>
+            Chef Odin
+          </cite> made by Mohammad </p>
+        <p class="copy-right">© 2024 Chef Odin. All rights reserved.</p>
 
+      </div>
+
+      <div class="footer-location">
+        <p>Location:</p>
+        <address>2702 - 7895 Jane street Zahle, Lebanon </address>
+
+      </div>
+
+      <div class="footer-contact">
+        <p>Contact us:</p>
+        <address>
+          <a href="mailto:kenaan.odin@outlook.com">kenaan.odin@outlook.com</a>
+          <a href="tel:+1 (123) 000-1212">tel:+1 (123) 000-1212</a>
+          <a href="https://www.facebook.com/" class="icon" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+          <a href="https://www.instagram.com/" class="icon" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+        </address>
+      </div>
     </div>
-
-    <div class="footer-address">
-      <p>address:</p>
-      <address>2702 - 7895 Jane street Zahle, Lebanon </address>
-    </div>
-
-    <div class="footer-contact">
-      <p>Contact us:</p>
-      <address>
-        <a href="mailto:kenaan.odin@outlook.com">kenaan.odin@outlook.com</a>
-        <a href="tel:+1 (123) 000-1212">tel:+1 (123) 000-1212</a>
-        <img src="./assets/images/facebook-app-symbol.png" height="24db" alt="">
-        <img src="./assets/images/instagram.png" alt="" height="24db">
-      </address>
-    </div>
-
-
-
   </footer>
 </body>
 
