--- a/recipes/lemon-chicken-and-rice-casserole/index.html
+++ b/recipes/lemon-chicken-and-rice-casserole/index.html
@@ -5,6 +5,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="../../favicon.ico" type="image/x-icon">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500&display=swap"
+    rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="../../style/main.css">
   <title>Lemon Chicken and Rice Casserole | Odin Recipes</title>
 </head>
@@ -12,12 +18,16 @@
 <body>
 
   <header>
-    <a href="../../">
-      <img src="../../assets/images/chef-odin-180w.png" alt="odin logo" height="79">
-    </a>
-    <p><a href="../../">Home</a> / Lemon Chicken and Rice Casserole </p>
-
+    <div class="container">
+      <a href="../../">
+        <img src="../../assets/images/chef-odin-180w.png" alt="odin logo" height="79">
+      </a>
+    </div>
   </header>
+
+  <p><a href="../../">Home</a> / Lemon Chicken and Rice Casserole </p>
+
+
 
   <div class="container">
     <h1>Lemon Chicken and Rice Casserole</h1>
@@ -25,95 +35,103 @@
             ../../assets/images/chicken-rice-750w.webp 750w" sizes="(max-width: 780px) 360px, 750px"
       src="../../assets/images/checken-rice-750w.webp" alt="Lemon Chicken and Rice Casserole" height="500"
       class="img-hero">
+    <div class="section-1">
+      <h2 class="description">Description</h2>
 
-    <h2>Description</h2>
+      <p>Casseroles never disappoint. They are filling, hearty, and can last you several meals if you’re cooking for
+        yourself or a few others. This chicken and rice casserole does just that while being bright and bold thanks to
+        lemon, tarragon, and cream of chicken soup. It’s everything you’d want in a chicken and rice soup, but in a
+        casserole.</p>
 
-    <p>Casseroles never disappoint. They are filling, hearty, and can last you several meals if you’re cooking for
-      yourself or a few others. This chicken and rice casserole does just that while being bright and bold thanks to
-      lemon, tarragon, and cream of chicken soup. It’s everything you’d want in a chicken and rice soup, but in a
-      casserole.</p>
-
-    <p>The chicken thighs are seared quickly in hot oil before finishing in the oven, resulting in tender and moist meat
-      with a crispy exterior. If you can’t find cream of chicken soup at the store (or want to try a different option),
-      cream of celery or cream of mushroom is a great substitute. Either way, the casserole will come out creamy and
-      perfect.</p>
-
-    <h2>Ingredients</h2>
-    <ul>
-      <li>4 (6-ounce) bone-in, skin-on chicken thighs</li>
-      <li>1 teaspoon kosher salt</li>
-      <li>1/4 teaspoon freshly ground black pepper</li>
-      <li>2 tablespoons olive oil</li>
-      <li>2 cloves garlic, finely chopped</li>
-      <li>1 1/2 cups uncooked long-grain white rice, rinsed</li>
-      <li>1 (10 1/2-ounce) cream of chicken soup</li>
-      <li>1 tablespoon freshly squeezed lemon juice</li>
-      <li>1 teaspoon grated lemon zest</li>
-      <li>1 teaspoon chopped fresh tarragon, plus more for garnish</li>
-      <li>1/4 teaspoon crushed red pepper, plus more for garnish</li>
-      <li>2 cups chicken broth</li>
-      <li>1 lemon, sliced into 1/8-inch thick slices</li>
-      <li>1 teaspoon chopped fresh flat-leaf parsley</li>
-    </ul>
-
-    <h2>Steps</h2>
-    <ol>
-      <li>Gather all ingredients.</li>
-      <li>Preheat the oven to 375 degrees F (190 degrees C). Season chicken thighs evenly with salt and pepper on both
-        sides.</li>
-      <li>Heat oil in a large oven-safe skillet over medium-high. Add chicken thighs to skillet, skin sides down, and
-        cook
-        until golden brown on both sides, about 8 minutes. Transfer chicken thighs to a plate; set aside. Do not wipe
-        skillet clean.</li>
-      <li>Add garlic to drippings in the skillet. Cook, stirring constantly, until fragrant, 10 to 20 seconds. Add rice,
-        cream of chicken soup, lemon juice, lemon zest, tarragon, and crushed red pepper; whisk to combine. Gradually
-        add
-        broth, whisking constantly, until combined and smooth. Arrange chicken thighs, skin sides up, over rice mixture
-        and place lemon slices over chicken thighs. Cover tightly with aluminum foil or lid, and transfer to the
-        preheated
-        oven.</li>
-      <li>Add garlic to drippings in the skillet. Cook, stirring constantly, until fragrant, 10 to 20 seconds. Add rice,
-        cream of chicken soup, lemon juice, lemon zest, tarragon, and crushed red pepper; whisk to combine. Gradually
-        add
-        broth, whisking constantly, until combined and smooth. Arrange chicken thighs, skin sides up, over rice mixture
-        and place lemon slices over chicken thighs. Cover tightly with aluminum foil or lid, and transfer to the
-        preheated
-        oven.</li>
-      <li>Remove from the oven. Stir rice mixture, and sprinkle with parsley. Divide chicken, lemon slices, and rice
-        evenly among 4 plates. Garnish with
-        additional tarragon and crushed red pepper.</li>
-    </ol>
+      <p>The chicken thighs are seared quickly in hot oil before finishing in the oven, resulting in tender and moist
+        meat
+        with a crispy exterior. If you can’t find cream of chicken soup at the store (or want to try a different
+        option),
+        cream of celery or cream of mushroom is a great substitute. Either way, the casserole will come out creamy and
+        perfect.</p>
+    </div>
+    <div class="section-2">
+      <h2>Ingredients</h2>
+      <ul>
+        <li>4 (6-ounce) bone-in, skin-on chicken thighs</li>
+        <li>1 teaspoon kosher salt</li>
+        <li>1/4 teaspoon freshly ground black pepper</li>
+        <li>2 tablespoons olive oil</li>
+        <li>2 cloves garlic, finely chopped</li>
+        <li>1 1/2 cups uncooked long-grain white rice, rinsed</li>
+        <li>1 (10 1/2-ounce) cream of chicken soup</li>
+        <li>1 tablespoon freshly squeezed lemon juice</li>
+        <li>1 teaspoon grated lemon zest</li>
+        <li>1 teaspoon chopped fresh tarragon, plus more for garnish</li>
+        <li>1/4 teaspoon crushed red pepper, plus more for garnish</li>
+        <li>2 cups chicken broth</li>
+        <li>1 lemon, sliced into 1/8-inch thick slices</li>
+        <li>1 teaspoon chopped fresh flat-leaf parsley</li>
+      </ul>
+    </div>
+    <div class="section-3">
+      <h2>Steps</h2>
+      <ol>
+        <li>Gather all ingredients.</li>
+        <li>Preheat the oven to 375 degrees F (190 degrees C). Season chicken thighs evenly with salt and pepper on both
+          sides.</li>
+        <li>Heat oil in a large oven-safe skillet over medium-high. Add chicken thighs to skillet, skin sides down, and
+          cook
+          until golden brown on both sides, about 8 minutes. Transfer chicken thighs to a plate; set aside. Do not wipe
+          skillet clean.</li>
+        <li>Add garlic to drippings in the skillet. Cook, stirring constantly, until fragrant, 10 to 20 seconds. Add
+          rice,
+          cream of chicken soup, lemon juice, lemon zest, tarragon, and crushed red pepper; whisk to combine. Gradually
+          add
+          broth, whisking constantly, until combined and smooth. Arrange chicken thighs, skin sides up, over rice
+          mixture
+          and place lemon slices over chicken thighs. Cover tightly with aluminum foil or lid, and transfer to the
+          preheated
+          oven.</li>
+        <li>Add garlic to drippings in the skillet. Cook, stirring constantly, until fragrant, 10 to 20 seconds. Add
+          rice,
+          cream of chicken soup, lemon juice, lemon zest, tarragon, and crushed red pepper; whisk to combine. Gradually
+          add
+          broth, whisking constantly, until combined and smooth. Arrange chicken thighs, skin sides up, over rice
+          mixture
+          and place lemon slices over chicken thighs. Cover tightly with aluminum foil or lid, and transfer to the
+          preheated
+          oven.</li>
+        <li>Remove from the oven. Stir rice mixture, and sprinkle with parsley. Divide chicken, lemon slices, and rice
+          evenly among 4 plates. Garnish with
+          additional tarragon and crushed red pepper.</li>
+      </ol>
+    </div>
   </div>
 
-
   <footer>
-    <div class="footer-about">
+    <div class="container">
+      <div class="footer-about">
 
-      <p><cite>
-          Recipes Website
-        </cite> made it by MH'D </p>
+        <p><cite>
+            Chef Odin
+          </cite> made by Mohammad </p>
+        <p class="copy-right">© 2024 Chef Odin. All rights reserved.</p>
 
+      </div>
+
+      <div class="footer-location">
+        <p>Location:</p>
+        <address>2702 - 7895 Jane street Zahle, Lebanon </address>
+
+      </div>
+
+      <div class="footer-contact">
+        <p>Contact us:</p>
+        <address>
+          <a href="mailto:kenaan.odin@outlook.com">kenaan.odin@outlook.com</a>
+          <a href="tel:+1 (123) 000-1212">tel:+1 (123) 000-1212</a>
+          <a href="https://www.facebook.com/" class="icon" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+          <a href="https://www.instagram.com/" class="icon" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+        </address>
+      </div>
     </div>
-
-    <div class="footer-address">
-      <p>address:</p>
-      <address>2702 - 7895 Jane street Zahle, Lebanon </address>
-    </div>
-
-    <div class="footer-contact">
-      <p>Contact us:</p>
-      <address>
-        <a href="mailto:kenaan.odin@outlook.com">kenaan.odin@outlook.com</a>
-        <a href="tel:+1 (123) 000-1212">tel:+1 (123) 000-1212</a>
-        <img src="./assets/images/facebook-app-symbol.png" height="24db" alt="">
-        <img src="./assets/images/instagram.png" alt="" height="24db">
-      </address>
-    </div>
-
-
-
   </footer>
-
 </body>
 
 </html>
