--- a/recipes/tartufo/index.html
+++ b/recipes/tartufo/index.html
@@ -5,15 +5,23 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="../../favicon.ico" type="image/x-icon">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500&display=swap"
+    rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="../../style/main.css">
   <title>Tartufo | Odin Recipes</title>
 </head>
 
 <body>
   <header>
-    <a href="../../">
-      <img src="../../assets/images/chef-odin-180w.png" alt="odin logo" height="79">
-    </a>
+    <div class="container">
+      <a href="../../">
+        <img src="../../assets/images/chef-odin-180w.png" alt="odin logo" height="79">
+      </a>
+    </div>
   </header>
   <p><a href="../../">Home</a> / Tartufo</p>
 
@@ -23,77 +31,88 @@
             ../../assets/images/tartufo-750w.webp 750w" sizes="(max-width: 780px) 360px, 750px"
       src="../../assets/images/tartufo-750w.webp" alt="Lemon Chicken and Rice Casserole" height="500" class="img-hero">
 
-
-    <h2>Description</h2>
-    <p>Tartufo is a classic Italian dessert that you can make at home. It requires some patience as there is freezing
-      time
-      involved. Rolling the tartufos in pistachio and cookie crumbs is extra delicious.</p>
-
-    <h2>Ingredients</h2>
-    <ul>
-      <li>1 quart vanilla ice cream (such as Haagen Dazs®)</li>
-      <li>8 maraschino cherries (such as Luxardo®) </li>
-      <li>2 cups semisweet chocolate chips</li>
-      <li>5 tablespoons unrefined coconut oil</li>
-      <li>36 chocolate wafer cookies (such as Dewey’s Bakery®) (optional)</li>
-      <li>1/2 cup salted roasted pistachios (optional)</li>
-    </ul>
-
-    <h2>Steps</h2>
-    <ol>
-      <li>Gather all ingredients.</li>
-      <li>Let ice cream stand at room temperature until slightly softened, about 10 minutes. Line 8 small bowls with
-        plastic wrap, leaving a 3-inch overhang.</li>
-      <li>Using a 2 oz. (1/4-cup) ice-cream scoop, place 1 scoop of ice cream into the bottom of each bowl. Gently press
-        a
-        maraschino cherry into the top of each ice-cream scoop, then top each with another 2 oz. (1/4-cup) scoop of ice
-        cream. </li>
-      <li>Working with 1 bowl of ice cream at a time, gather overhanging plastic, wrap it up around ice cream, and
-        gently
-        twist it to form a ball. Freeze until ice cream is firm and set, about 2 hours. </li>
-      <li>Place chocolate chips in a large microwave-safe bowl, and microwave on HIGH in (30-second) intervals, stirring
-        thoroughly between intervals, until melted, 3 to 4 minutes total. Whisk in coconut oil until oil is completely
-        melted and mixture is combined. Let cool slightly at room temperature, about 10 minutes.</li>
-      <li>Meanwhile, pulse cookies and pistachios, if using, in a food processor until finely ground, about 15 quick
-        pulses. Transfer to a shallow bowl, and set aside at room temperature.</li>
-      <li>Working with 1 ice-cream ball at a time, remove ice-cream ball from freezer. Remove plastic wrap, and place
-        ice-cream ball on a wire rack set inside a rimmed baking sheet. Pour chocolate mixture over ice-cream ball,
-        allowing it to thinly coat the top and sides.</li>
-      <li>If coating in cookie mixture, quickly and carefully invert chocolate-coated ice-cream ball into cookie
-        mixture,
-        rolling until evenly coated. Transfer coated ice cream ball to a clean wire rack set inside a large, rimmed
-        baking
-        sheet in the freezer. Repeat process with remaining 7 ice-cream balls, returning to the freezer after each one.
-        Freeze until set, about 1 hour, or until ready to serve.</li>
-    </ol>
-
+    <div class="section-1">
+      <h2 class="description">Description</h2>
+      <p>Tartufo is a classic Italian dessert that you can make at home. It requires some patience as there is freezing
+        time
+        involved. Rolling the tartufos in pistachio and cookie crumbs is extra delicious.</p>
+    </div>
+    <div class="section-2">
+      <h2>Ingredients</h2>
+      <ul>
+        <li>1 quart vanilla ice cream (such as Haagen Dazs®)</li>
+        <li>8 maraschino cherries (such as Luxardo®) </li>
+        <li>2 cups semisweet chocolate chips</li>
+        <li>5 tablespoons unrefined coconut oil</li>
+        <li>36 chocolate wafer cookies (such as Dewey’s Bakery®) (optional)</li>
+        <li>1/2 cup salted roasted pistachios (optional)</li>
+      </ul>
+    </div>
+    <div class="section-3">
+      <h2>Steps</h2>
+      <ol>
+        <li>Gather all ingredients.</li>
+        <li>Let ice cream stand at room temperature until slightly softened, about 10 minutes. Line 8 small bowls with
+          plastic wrap, leaving a 3-inch overhang.</li>
+        <li>Using a 2 oz. (1/4-cup) ice-cream scoop, place 1 scoop of ice cream into the bottom of each bowl. Gently
+          press
+          a
+          maraschino cherry into the top of each ice-cream scoop, then top each with another 2 oz. (1/4-cup) scoop of
+          ice
+          cream. </li>
+        <li>Working with 1 bowl of ice cream at a time, gather overhanging plastic, wrap it up around ice cream, and
+          gently
+          twist it to form a ball. Freeze until ice cream is firm and set, about 2 hours. </li>
+        <li>Place chocolate chips in a large microwave-safe bowl, and microwave on HIGH in (30-second) intervals,
+          stirring
+          thoroughly between intervals, until melted, 3 to 4 minutes total. Whisk in coconut oil until oil is completely
+          melted and mixture is combined. Let cool slightly at room temperature, about 10 minutes.</li>
+        <li>Meanwhile, pulse cookies and pistachios, if using, in a food processor until finely ground, about 15 quick
+          pulses. Transfer to a shallow bowl, and set aside at room temperature.</li>
+        <li>Working with 1 ice-cream ball at a time, remove ice-cream ball from freezer. Remove plastic wrap, and place
+          ice-cream ball on a wire rack set inside a rimmed baking sheet. Pour chocolate mixture over ice-cream ball,
+          allowing it to thinly coat the top and sides.</li>
+        <li>If coating in cookie mixture, quickly and carefully invert chocolate-coated ice-cream ball into cookie
+          mixture,
+          rolling until evenly coated. Transfer coated ice cream ball to a clean wire rack set inside a large, rimmed
+          baking
+          sheet in the freezer. Repeat process with remaining 7 ice-cream balls, returning to the freezer after each
+          one.
+          Freeze until set, about 1 hour, or until ready to serve.</li>
+      </ol>
+    </div>
   </div>
 
   <footer>
-    <div class="footer-about">
+    <div class="container">
+      <div class="footer-about">
 
-      <p><cite>
-          Recipes Website
-        </cite> made it by MH'D </p>
+        <p><cite>
+            Chef Odin
+          </cite> made by Mohammad </p>
+        <p class="copy-right">© 2024 Chef Odin. All rights reserved.</p>
 
+      </div>
+
+      <div class="footer-location">
+        <p>Location:</p>
+        <address>2702 - 7895 Jane street Zahle, Lebanon </address>
+
+      </div>
+
+      <div class="footer-contact">
+        <p>Contact us:</p>
+        <address>
+          <a href="mailto:kenaan.odin@outlook.com">kenaan.odin@outlook.com</a>
+          <a href="tel:+1 (123) 000-1212">tel:+1 (123) 000-1212</a>
+          <a href="https://www.facebook.com/" class="icon" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+          <a href="https://www.instagram.com/" class="icon" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+        </address>
+      </div>
     </div>
-
-    <div class="footer-address">
-      <p>address:</p>
-      <address>2702 - 7895 Jane street Zahle, Lebanon </address>
-    </div>
-
-    <div class="footer-contact">
-      <p>Contact us:</p>
-      <address>
-        <a href="mailto:kenaan.odin@outlook.com">kenaan.odin@outlook.com</a>
-        <a href="tel:+1 (123) 000-1212">tel:+1 (123) 000-1212</a>
-        <img src="./assets/images/facebook-app-symbol.png" height="24db" alt="">
-        <img src="./assets/images/instagram.png" alt="" height="24db">
-      </address>
-    </div>
-
   </footer>
+
+
 </body>
 
 </html>
