feat(recipes): add asidebar for each recipe page

--- a/recipes/caprese-stuffed-avocado/index.html
+++ b/recipes/caprese-stuffed-avocado/index.html
@@ -21,24 +21,38 @@
       <a href="../../">
         <img src="../../assets/images/chef-odin-180w.png" alt="odin logo" height="79">
       </a>
+      <a href="../../" class="home-icone"><i class="fa fa-home"></i></a>
     </div>
   </header>
 
-  <p><a href="../../">Home</a> / Caprese Stuffed Avocado</p>
+  <!-- <p><a href="../../">Home</a> / Caprese Stuffed Avocado</p> -->
 
   <div class="container">
-    <h1>Caprese Stuffed Avocado</h1>
+    <section class="section-0">
+      <picture>
     <img srcset="../../assets/images/r-avocado-360w.webp 360w,
             ../../assets/images/r-avocado-750w.webp 750w" sizes="(max-width: 780px) 360px, 750px"
       src="../../assets/images/r-avocado-750w.webp" alt="Caprese Stuffed Avocado" height="500px" class="img-hero">
-    <div class="section-1">
+
+    </picture>
+    <aside>
+      <h2>Page contents</h2>
+      <ul>
+        <li><a href="#section-1">Description</a></li>
+        <li><a href="#section-2">Ingredients</a></li>
+        <li><a href="#section-3">Steps</a></li>
+      </ul>
+    </aside>
+  </section>
+      <h1>Caprese Stuffed Avocado</h1>
+    <div class="section-1" id="section-1">
       <h2 class="description">Description</h2>
 
       <p>This Caprese stuffed avocado salad is made up of avocado halves, filled with a simple Caprese salad using
         cherry
         tomatoes, mozzarella pearls, and basil, and drizzled with balsamic vinegar.</p>
     </div>
-    <div class="section-2">
+    <div class="section-2" id="section-2">
       <h2>Ingredients</h2>
       <ul>
         <li>1 avocado - peeled, pitted, and cut in half</li>
@@ -49,7 +63,7 @@
         <li>salt and pepper to taste</li>
       </ul>
     </div>
-    <div class="section-3">
+    <div class="section-3" id="section-3">
       <h2>Steps</h2>
       <ol>
         <li>Arrange avocado halves onto a plate.</li>
