--- a/recipes/lemon-chicken-and-rice-casserole/index.html
+++ b/recipes/lemon-chicken-and-rice-casserole/index.html
@@ -10,7 +10,9 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500&display=swap"
     rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+    integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="../../style/main.css">
   <title>Lemon Chicken and Rice Casserole | Odin Recipes</title>
 </head>
@@ -22,20 +24,31 @@
       <a href="../../">
         <img src="../../assets/images/chef-odin-180w.png" alt="odin logo" height="79">
       </a>
+      <a href="../../" class="home-icone"><i class="fa fa-home"></i></a>
     </div>
   </header>
+ 
 
-  <p><a href="../../">Home</a> / Lemon Chicken and Rice Casserole </p>
-
-
-
+  <!-- <p><a href="../../">Home</a> / Lemon Chicken and Rice Casserole </p> -->
   <div class="container">
-    <h1>Lemon Chicken and Rice Casserole</h1>
-    <img srcset="../../assets/images/chicken-rice-360w.webp 360w,
+    <section class="section-0">
+      <picture>
+        <img srcset="../../assets/images/chicken-rice-360w.webp 360w,
             ../../assets/images/chicken-rice-750w.webp 750w" sizes="(max-width: 780px) 360px, 750px"
-      src="../../assets/images/checken-rice-750w.webp" alt="Lemon Chicken and Rice Casserole" height="500"
-      class="img-hero">
-    <div class="section-1">
+          src="../../assets/images/checken-rice-750w.webp" alt="Lemon Chicken and Rice Casserole" height="500"
+          class="img-hero">
+      </picture>
+      <aside>
+        <h2>Page contents</h2>
+        <ul>
+          <li><a href="#section-1">Description</a></li>
+          <li><a href="#section-2">Ingredients</a></li>
+          <li><a href="#section-3">Steps</a></li>
+        </ul>
+      </aside>
+    </section>
+    <h1>Lemon Chicken and Rice Casserole</h1>
+    <div class="section-1" id="section-1">
       <h2 class="description">Description</h2>
 
       <p>Casseroles never disappoint. They are filling, hearty, and can last you several meals if you’re cooking for
@@ -50,7 +63,7 @@
         cream of celery or cream of mushroom is a great substitute. Either way, the casserole will come out creamy and
         perfect.</p>
     </div>
-    <div class="section-2">
+    <div class="section-2" id="section-2">
       <h2>Ingredients</h2>
       <ul>
         <li>4 (6-ounce) bone-in, skin-on chicken thighs</li>
@@ -69,7 +82,7 @@
         <li>1 teaspoon chopped fresh flat-leaf parsley</li>
       </ul>
     </div>
-    <div class="section-3">
+    <div class="section-3" id="section-3">
       <h2>Steps</h2>
       <ol>
         <li>Gather all ingredients.</li>
