--- a/recipes/tartufo/index.html
+++ b/recipes/tartufo/index.html
@@ -10,7 +10,9 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500&display=swap"
     rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+    integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="../../style/main.css">
   <title>Tartufo | Odin Recipes</title>
 </head>
@@ -21,23 +23,36 @@
       <a href="../../">
         <img src="../../assets/images/chef-odin-180w.png" alt="odin logo" height="79">
       </a>
+      <a href="../../" class="home-icone"><i class="fa fa-home"></i></a>
     </div>
   </header>
   <p><a href="../../">Home</a> / Tartufo</p>
 
   <div class="container">
-    <h1>Tartufo</h1>
-    <img srcset="../../assets/images/tartufo-360w.webp 360w,
+    <section class="section-0">
+      <picture>
+      <img srcset="../../assets/images/tartufo-360w.webp 360w,
             ../../assets/images/tartufo-750w.webp 750w" sizes="(max-width: 780px) 360px, 750px"
-      src="../../assets/images/tartufo-750w.webp" alt="Lemon Chicken and Rice Casserole" height="500" class="img-hero">
-
-    <div class="section-1">
+        src="../../assets/images/tartufo-750w.webp" alt="Lemon Chicken and Rice Casserole" height="500"
+        class="img-hero">
+      </picture>
+      <aside>
+        <h2>Page contents</h2>
+        <ul>
+          <li><a href="#section-1">Description</a></li>
+          <li><a href="#section-2">Ingredients</a></li>
+          <li><a href="#section-3">Steps</a></li>
+        </ul>
+      </aside>
+    </section>
+    <h1>Tartufo</h1>
+    <section class="section-1" id="section-1">
       <h2 class="description">Description</h2>
       <p>Tartufo is a classic Italian dessert that you can make at home. It requires some patience as there is freezing
         time
         involved. Rolling the tartufos in pistachio and cookie crumbs is extra delicious.</p>
-    </div>
-    <div class="section-2">
+    </section>
+    <section class="section-2" id="section-2">
       <h2>Ingredients</h2>
       <ul>
         <li>1 quart vanilla ice cream (such as Haagen Dazs®)</li>
@@ -47,8 +62,8 @@
         <li>36 chocolate wafer cookies (such as Dewey’s Bakery®) (optional)</li>
         <li>1/2 cup salted roasted pistachios (optional)</li>
       </ul>
-    </div>
-    <div class="section-3">
+    </section>
+    <section class="section-3" id="section-3">
       <h2>Steps</h2>
       <ol>
         <li>Gather all ingredients.</li>
@@ -80,7 +95,7 @@
           one.
           Freeze until set, about 1 hour, or until ready to serve.</li>
       </ol>
-    </div>
+    </section>
   </div>
 
   <footer>
